--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <div class="u-align-left u-container-style u-group u-radius-50 u-shape-round u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500">
           <div class="u-container-layout u-valign-middle u-container-layout-1" style="padding-bottom:0">
             <h2 style="margin-top:50px; left:-60px;" class="u-text u-text-default u-text-1">Machu Picchu - The Strokes</h2>
-            <img class="u-wave" style="margin-right:100px" src="images/soundwave.png">
+            <img class="u-wave" style="margin-right:100px; z-index:4;" id="soundwave" src="images/soundwave.png">
             <img src="images/play-btn.png" class="play-btn"></img>
             <a style="margin-top:-20px !important; margin-left:40px; left: 15%;" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Go</a>
-            <div class="sound-selection"></div>
+            <div id="sound-selection" class="sound-selection" style="z-index:5;"></div>
           </div>
         </div>
         <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1470" data-image-height="980" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500"></div>
@@ -139,7 +139,7 @@
             </div><!--/blog_post-->
           </div>
         </div><!--/blog-->
-        <a href="https://nicepage.me" class="u-active-white u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-hover-white u-none u-radius-15 u-text-active-palette-4-base u-text-body-alt-color u-text-hover-palette-4-base u-btn-4">get more</a>
+        <!-- <a href="https://nicepage.me" class="u-active-white u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-hover-white u-none u-radius-15 u-text-active-palette-4-base u-text-body-alt-color u-text-hover-palette-4-base u-btn-4">get more</a> -->
       </div>
     </section>
     
