--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="carousel_b157">
-      <div class="u-clearfix u-sheet u-valign-bottom u-sheet-1" style="padding-bottom:250px">
+      <div id='dropdown' class="u-clearfix u-sheet u-valign-bottom u-sheet-1" style="padding-bottom:250px">
         <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500">Slogan</h3>
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-2" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="0">Wavecut</h1>
-        <input type="text" placeholder="Find a song" class="u-active-palette-4-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500"></input>
+        <input type="text" oninput="" placeholder="Find a song" class="u-active-palette-4-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500"></input>
       </div>
     </section>
     <section class="u-clearfix u-palette-1-light-2 u-section-2" id="carousel_a07e">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-left u-container-style u-group u-radius-50 u-shape-round u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500">
           <div class="u-container-layout u-valign-middle u-container-layout-1" style="padding-bottom:0">
-            <h2 style="margin-top:50px; left:-60px;" class="u-text u-text-default u-text-1">Machu Picchu - The Strokes</h2>
+            <h2 style="margin-top:50px; left:-60px;" class="u-text u-text-default u-text-1">R U Mine? - Arctic Monkeys</h2>
             <img class="u-wave" style="margin-right:100px; z-index:4;" id="soundwave" src="images/soundwave.png">
-            <img src="images/play-btn.png" class="play-btn"></img>
+            <img onclick="toggle(arcticmonkeys, 191)" src="images/play-btn.png" class="play-btn"></img>
             <a style="margin-top:-20px !important; margin-left:40px; left: 15%;" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Go</a>
             <div id="sound-selection" class="sound-selection" style="z-index:5;"></div>
           </div>
@@ -104,7 +104,7 @@
                   <a class="u-post-header-link" href="blog/post-5.html"><!--blog_post_header_content-->Breathe Deeper - Tame Impala<br><br><!--/blog_post_header_content--></a>
                 </h4><!--/blog_post_header--><!--blog_post_metadata-->
                 <div class="u-blog-control u-metadata u-text-grey-30 u-metadata-1"><!--blog_post_metadata_date-->
-                  <img src="images/play-btn.png" style="position:absolute; left:-40px;height:30px;top:10px;">
+                  <img onclick="toggle(tameimpala, 73)" src="images/play-btn.png" style="position:absolute; left:-40px;height:30px;top:10px;">
                   <img src="images/soundwave.png" style="height:50px;left:-50px">
                 </div><!--/blog_post_metadata-->
               </div>
@@ -118,7 +118,7 @@
                   <a class="u-post-header-link" href="blog/post-3.html"><!--blog_post_header_content-->Pattern - The Last Shadow Puppets<!--/blog_post_header_content--></a>
                 </h4><!--/blog_post_header--><!--blog_post_metadata-->
                 <div class="u-blog-control u-metadata u-text-grey-30 u-metadata-3"><!--blog_post_metadata_date-->
-                  <img src="images/play-btn.png" style="position:absolute; left:-40px;height:30px;top:10px;">
+                  <img onclick="toggle(lastshadowpuppets, '172.5')" src="images/play-btn.png" style="position:absolute; left:-40px;height:30px;top:10px;">
                   <img src="images/soundwave.png" style="height:50px;">
                 </div><!--/blog_post_metadata-->
               </div>
@@ -132,7 +132,7 @@
                   <a class="u-post-header-link" href="blog/post-3.html"><!--blog_post_header_content-->Up To No Good - The Hoosiers<br><br><!--/blog_post_header_content--></a>
                 </h4><!--/blog_post_header--><!--blog_post_metadata-->
                 <div class="u-blog-control u-metadata u-text-grey-30 u-metadata-3"><!--blog_post_metadata_date-->
-                  <img src="images/play-btn.png" style="position:absolute; left:-40px;height:30px;top:10px;">
+                  <img onclick="toggle(thehoosiers, 43)" src="images/play-btn.png" style="position:absolute; left:-40px;height:30px;top:10px;">
                   <img src="images/soundwave.png" style="height:50px;">
                 </div><!--/blog_post_metadata-->
               </div>
