--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-left u-container-style u-group u-radius-50 u-shape-round u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500">
           <div class="u-container-layout u-valign-middle u-container-layout-1" style="padding-bottom:0">
-            <h2 style="margin-top:50px; left:-60px;" class="u-text u-text-default u-text-1">R U Mine? - Arctic Monkeys</h2>
+            <h2 style="margin-top:50px; left:-60px;" class="u-text u-text-default u-text-1">Knee Socks - Arctic Monkeys</h2>
             <img class="u-wave" style="margin-right:100px; z-index:4;" id="soundwave" src="images/soundwave.png">
             <img onclick="toggle(arcticmonkeys, 191)" src="images/play-btn.png" class="play-btn"></img>
             <a style="margin-top:-20px !important; margin-left:40px; left: 15%;" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Go</a>
