--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             <h2 style="margin-top:50px; left:-60px;" class="u-text u-text-default u-text-1">Knee Socks - Arctic Monkeys</h2>
             <img class="u-wave" style="margin-right:100px; z-index:4;" id="soundwave" src="images/soundwave.png">
             <img onclick="toggle(arcticmonkeys, 191)" src="images/play-btn.png" class="play-btn"></img>
-            <a style="margin-top:-20px !important; margin-left:40px; left: 15%;" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Go</a>
+            <a style="margin-top:-20px !important; margin-left:40px; left: 15%;" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">See results</a>
+            <div id="addrec" style="right: 283px; bottom: 4px; position: absolute; display:inline-block; "><p style="color: #2cccc4; font:italic 13px 'Arial Narrow', Arial, sans-serif; ">Add Recommendation</p></div>
             <div id="sound-selection" class="sound-selection" style="z-index:5;"></div>
           </div>
         </div>
