--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="carousel_b157">
       <div id='dropdown' class="u-clearfix u-sheet u-valign-bottom u-sheet-1" style="padding-bottom:250px">
-        <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500">Slogan</h3>
+        <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500">find songs your way</h3>
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-2" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="0">Wavecut</h1>
         <input type="text" oninput="" placeholder="Find a song" class="u-active-palette-4-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="555" data-animation-delay="500"></input>
       </div>
